// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`виджет "отчет по вину" при маунте возьмет статус закрытия виджета из local storage 1`] = `undefined`;

exports[`виджет "отчет по вину" при успешной оплате передаст статус в виджет 1`] = `
Object {
  "status": "PAID",
}
`;

exports[`виджет "отчет по вину" при успешной оплате применит квоту 1`] = `
Array [
  Object {
    "params": Object {
      "category": "cars",
      "decrement_quota": true,
      "offer_id": "1099744590-d19f2739",
    },
    "path": "carfax/carfax_get_offer_report",
  },
]
`;

exports[`запрос статуса вин репорта: если виджет есть запросит данные 1`] = `
Array [
  Object {
    "params": Object {
      "category": "cars",
      "decrement_quota": false,
      "offer_id": "1099744590-d19f2739",
    },
    "path": "carfax/carfax_get_offer_report",
  },
]
`;

exports[`запрос статуса вин репорта: если виджет есть при ошибке сообщит об этом виджету 1`] = `
Object {
  "status": "ERROR",
}
`;

exports[`запрос статуса вин репорта: если виджет есть при покупке с квотой запросит отчет с правильными данными 1`] = `
Array [
  Object {
    "params": Object {
      "category": "cars",
      "decrement_quota": true,
      "offer_id": "1099744590-d19f2739",
    },
    "path": "carfax/carfax_get_offer_report",
  },
]
`;

exports[`запрос статуса вин репорта: если виджет есть при удачном ответе если отчет уже куплен сообщит об этом виджету 1`] = `
Object {
  "status": "PAID",
}
`;

exports[`запрос статуса вин репорта: если виджет есть при удачном ответе передаст данные в виджет 1`] = `
Object {
  "status": "PAID",
}
`;
